recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:9: error: ')' expected but ';' found.
    droite(angle;Double)    
                ^Tree:9: error: ';' expected but ')' found.
    droite(angle;Double)    
                       ^